--- a/index.html
+++ b/index.html
@@ -77,6 +77,26 @@
      
     <!-- </div> -->
     <div class="center">
+      <form netlify>
+        <h1>Let us know if you use names from our site :)</h1>
+        <div class="input-set">
+          <label>You Name</label>
+          <input type="name" class="input" name="name">
+        </div>
+        <div class="input-set">
+          <label>Channel name Generated</label>
+          <input type="name" class="input" name="channel-name">
+        </div>
+        <div class="input-set">
+          <label>Email for Reply</label>
+          <input type="email" class="input" name="email">
+        </div>
+        <div class="input-set">
+          <label>Message</label>
+          <textarea name="message" class="textarea"></textarea>
+        </div>
+        <button type="submit" class="formButton">Send Message</button>
+      </form>
       <a href='https://free-hit-counters.net/'>freehitcounters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=ca1da37aaba85dbec175af07bd5f0843b57c804d'></script>
       <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/661111/t/1"></script>
       <h1>
