Google Adsense and Google Analytics script added

--- a/about.html
+++ b/about.html
@@ -10,9 +10,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="app.css" />
   <link rel="shortcut icon" href="icon/YouTube-icon.png" type="image/png" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-180925962-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-180925962-1');
+</script>
+
+  <!-- google ads -->
+  <script data-ad-client="ca-pub-4689888605712227" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <body>
     <div class="content">
+      <img src="https://img.icons8.com/fluent/48/000000/youtube-play.png"/>
       <a class="logo" href="https://youtubenamegenerator.ml"
         ><span class="logo-p1">You</span><span class="logo-p2">Tube</span> Name
         Generator</a
