--- a/index.html
+++ b/index.html
@@ -15,8 +15,21 @@
     rel="stylesheet"
     href="https://rawcdn.githack.com/AnasOnGit/ModalJs/f3e03e23e9d7459122951c2eddb58f22ded77490/modal.css"
   />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-180925962-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-180925962-1');
+</script>
+
+  <!-- google ads -->
+  <script data-ad-client="ca-pub-4689888605712227" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <body>
     <div class="content">
+      <img src="https://img.icons8.com/fluent/48/000000/youtube-play.png"/>
       <a class="logo"
         ><span class="logo-p1">You</span><span class="logo-p2">Tube</span> Name
         <span class="logo-p2">Generator</span></a
@@ -80,7 +93,7 @@
       <form netlify>
         <h1>Let us know if you use names from our site :)</h1>
         <div class="input-set">
-          <label>You Name</label>
+          <label>Your Name</label>
           <input type="name" class="input" name="name">
         </div>
         <div class="input-set">
